# due_diligence_gpt

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
eval/scenarios/scenario_01/: expected_flags.json
prompts/: chart_extract_v1.txt  extract_v1.txt  memo_v1.txt
sample_docs/: Manager_Update_Atlas_Growth_Fund_III_v2.txt
scripts/: run_demo.sh  streamlit_app.py
src/ddgpt/: __main__.py  cli.py  config.py  pipeline.py
src/ddgpt/copilot/: ic_copilot.py  recommendation_engine.py
src/ddgpt/extract/: base.py  cohere_extractor.py  llm_common.py  ollama_extractor.py  postprocess.py  regex_extractor.py  schemas.py  vision_extractor.py
src/ddgpt/ingestion/: ocr.py  page_render.py  pdf_loader.py
src/ddgpt/io/: loaders.py
src/ddgpt/layout/: definitions.py  footnote_linker.py  irr_mentions.py  models.py  section_parser.py
src/ddgpt/pipeline/: builders.py  fusion_extractor.py  orchestrator.py  scoring.py
src/ddgpt/provenance/: audit.py  evidence.py
src/ddgpt/render/: charts.py  pdf_report.py
src/ddgpt/report/: ic_memo.py  tables.py
src/ddgpt/risk/: engine.py
src/ddgpt/rules/: base.py  definition_drift.py  numeric_mismatch.py  (+3 more)
tests/: test_cli_smoke.py  test_config_trust.py  test_definition_drift.py  test_extractor_availability.py  test_financial_table_parser.py  test_fusion_extractor.py  test_irr_mention_conflict_rule.py  test_irr_mentions.py  test_layout_sections.py  test_llm_common.py  test_ollama_extractor.py  test_redaction.py  test_regex_extractor.py  test_risk_engine.py  test_rules_numeric.py  test_vision_extractor.py
(+11 files in other folders)
